Forum Posts Task Finished.

--- a/01.CSS-Overview/3.ForumPosts/main.css
+++ b/01.CSS-Overview/3.ForumPosts/main.css
@@ -25,6 +25,9 @@ nav>ul>li a {
      color: #fafad2;
     font-size: 20px;
 }
+nav>ul>li>a.current{
+    text-decoration: underline;
+}
 nav>ul>li>a:hover{
     text-decoration: underline;
 }
