--- a/01.CSS-Overview/3.ForumPosts/main.css
+++ b/01.CSS-Overview/3.ForumPosts/main.css
@@ -22,14 +22,16 @@ nav>ul li{
 }
 nav>ul>li a {
      text-decoration: none;
-     color: #fafad2;
+     color: #fffacd;
      font-size: 20px;
 }
-nav>ul>li>a.current{
+nav>ul>li:last-child{
     text-decoration: underline;
+    color: #fffacd;
 }
-nav>ul>li>a:hover{
-    text-decoration: underline;
+nav>ul>li>a.current{
+    background-color: #e0e0e0;
+    padding: 2px;
 }
 article{
     text-align: justify;
