--- a/02.CSS-Presentation/3.NestedDivs/main.css
+++ b/02.CSS-Presentation/3.NestedDivs/main.css
@@ -13,7 +13,8 @@ div.central{
     border:1px solid red;
     border-radius:1000px;
 }
-div { background-color:black;
+div {
+    background-color:black;
     border:1px solid red;
     border-radius:1000px;
     width:96%;
