Music Categories Task Finished

--- a/3.CSS-Layout/2.MusicCategories/main.css
+++ b/3.CSS-Layout/2.MusicCategories/main.css
@@ -5,7 +5,7 @@
 body{
     margin: 20px auto;
     padding: 20px;
-    background: #ccc;
+    background: #aaaaaa;
     font: 16px/1.5 'Times New Roman';
 }
 .categories{
