--- a/03.CSS-Layout/3.MembersLogin/main.css
+++ b/03.CSS-Layout/3.MembersLogin/main.css
@@ -3,6 +3,51 @@
     margin: 0;
     padding: 0;
 }
-body{
 
+body {
+    margin: 20px auto;
+    padding: 20px;
+    font: 16px/1.5 'serif';
+    background: #313131;
+}
+
+article p {
+    text-align: justify;
+    color: #ccc;
+    width: 600px;
+}
+
+label {
+    color: #fff;
+    margin: 0 0 10px 10px;
+}
+
+.login_form {
+    position: absolute;
+    top: 50%;
+    left: 6%;
+}
+
+header {
+    position: relative;
+    background: linear-gradient(#313131 50%, #545454 80%, #000 100%);
+    border: 1px solid #313131;
+    padding: 25px 10px 10px 10px;
+}
+
+input[type="submit"] {
+
+    background: radial-gradient(#f00 30%, #a30000 70%);
+    background: -moz-radial-gradient(#f00 30%, #a30000 70%);
+    background: -webkit-radial-gradient(#f00 30%, #a30000 70%);
+    background: -o-radial-gradient(#f00 30%, #a30000 70%);
+    border-radius: 6px;
+    padding: 5px;
+    color: #fff;
+    width: 50px;
+}
+
+h1 {
+    color: #ffff00;
+    margin: 10px 0 10px 0;
 }
