Laptop Store Task Initial Commit

--- a/03.CSS-Layout/5.LaptopStore/main.sass
+++ b/03.CSS-Layout/5.LaptopStore/main.sass
@@ -5,6 +5,7 @@
 body
   margin: 20px auto
   padding: 20px
+  font: 16px Candara
 
 .content
   border: 2px solid #ccc
@@ -35,12 +36,14 @@ nav ul li a:hover
 fieldset
   margin: 7px
   width: 280px
-  height: 160px
+  height: 180px
   float: left
 
 fieldset img
   padding: 5px
   float: left
+  width: 140px
+  height: 70px
 
 hr
   margin-bottom: 10px
@@ -51,10 +54,12 @@ label, input[type="range"]
 
 .product-content
   float: left
-  margin: 10px 5px 0 10px
+  margin: 10px 5px 10px 12px
+  text-align: justify
 
 .product-content p
-  line-height: 1.7em
+  line-height: 2em
+
 
 .laptops-parameters
   width: 200px
@@ -62,3 +67,4 @@ label, input[type="range"]
   position: absolute
   top: 30%
   left: 65%
+
