--- a/03.CSS-Layout/5.LaptopStore/main.css
+++ b/03.CSS-Layout/5.LaptopStore/main.css
@@ -1,80 +1,70 @@
 * {
-    margin: 0;
-    padding: 0;
-}
+  margin: 0;
+  padding: 0; }
 
 body {
-    margin: 20px auto;
-    padding: 20px;
-}
+  margin: 20px auto;
+  padding: 20px;
+  font: 16px Candara; }
 
 .content {
-    border: 2px solid #ccc;
-    width: 850px;
-    overflow: hidden;
-    margin: 20px auto;
-    padding: 20px;
-}
+  border: 2px solid #ccc;
+  width: 850px;
+  overflow: hidden;
+  margin: 20px auto;
+  padding: 20px; }
 
 nav {
-    position: relative;
-    top: 0;
-    left: 30%;
-}
+  position: relative;
+  top: 0;
+  left: 30%; }
 
 nav ul li {
-    display: inline-block;
-    list-style: none;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
+  display: inline-block;
+  list-style: none;
+  margin-top: 10px;
+  margin-bottom: 10px; }
 
 nav ul li a {
-    font-size: 20px;
-    font-weight: bold;
-    color: #6495ed;
-}
+  font-size: 20px;
+  font-weight: bold;
+  color: #6495ed; }
 
 nav ul li a:hover {
-    color: #7b68ee;
-}
+  color: #7b68ee; }
 
 fieldset {
-    margin: 7px;
-    width: 280px;
-    height: 160px;
-    float: left;
-}
+  margin: 7px;
+  width: 280px;
+  height: 180px;
+  float: left; }
 
 fieldset img {
-    padding: 5px;
-    float: left;
-}
+  padding: 5px;
+  float: left;
+  width: 140px;
+  height: 70px; }
 
 hr {
-    margin-bottom: 10px;
-}
+  margin-bottom: 10px; }
 
 label, input[type="range"] {
-    display: block;
-    margin-top: 10px;
-}
+  display: block;
+  margin-top: 10px; }
 
 .product-content {
-    float: left;
-    margin: 10px 5px 0 10px;
-}
+  float: left;
+  margin: 10px 5px 10px 12px;
+  text-align: justify; }
 
 .product-content p {
-    line-height: 1.7em;
-}
+  line-height: 2em; }
 
 .laptops-parameters {
-    width: 200px;
-    margin: 10px 5px 5px 10px;
-    position: absolute;
-    top: 30%;
-    left: 65%;
-}
+  width: 200px;
+  margin: 10px 5px 5px 10px;
+  position: absolute;
+  top: 30%;
+  left: 65%; }
 
 /*# sourceMappingURL=main.css.map */
