--- a/03.CSS-Layout/5.LaptopStore/main.css
+++ b/03.CSS-Layout/5.LaptopStore/main.css
@@ -10,7 +10,7 @@ body {
 }
 
 .content {
-    border: 2px solid #ccc;
+    border: 2px solid #2f4f4f;
     width: 850px;
     overflow: hidden;
     margin: 20px auto;
@@ -45,6 +45,7 @@ fieldset {
     width: 280px;
     height: 180px;
     float: left;
+    border: 2px solid #2f4f4f;
 }
 
 fieldset img {
@@ -61,6 +62,10 @@ hr {
 label, input[type="range"] {
     display: block;
     margin-top: 10px;
+}
+
+legend {
+    margin-left: 10px;
 }
 
 .product-content {
