--- a/03.CSS-Layout/5.LaptopStore/main.sass
+++ b/03.CSS-Layout/5.LaptopStore/main.sass
@@ -8,7 +8,7 @@ body
   font: 16px Candara
 
 .content
-  border: 2px solid #ccc
+  border: 2px solid #2f4f4f
   width: 850px
   overflow: hidden
   margin: 20px auto
@@ -38,6 +38,7 @@ fieldset
   width: 280px
   height: 180px
   float: left
+  border: 2px solid #2f4f4f
 
 fieldset img
   padding: 5px
@@ -52,6 +53,9 @@ label, input[type="range"]
   display: block
   margin-top: 10px
 
+legend
+  margin-left: 10px
+
 .product-content
   float: left
   margin: 10px 5px 10px 12px
@@ -60,11 +64,11 @@ label, input[type="range"]
 .product-content p
   line-height: 2em
 
-
 .laptops-parameters
   width: 200px
   margin: 10px 5px 5px 10px
   position: absolute
   top: 30%
   left: 65%
+
 
